--- a/index.html
+++ b/index.html
@@ -107,34 +107,19 @@
 					<div class="carousel-item active">
 						<img fetchpriority="low" src="./assets/images/slider/1024/ryoji-iwata-entreprise.1024.webp" class="d-block w-100"
 							alt="Homme classe traversant un passage piétion"
-							class = "d-block w-100" width="1920" height="888" style="max-width: 100%; height: auto;" 
-							srcset="./assets/images/slider/375/ryoji-iwata-entreprise.375.webp 375w,
-								./assets/images/slider/768/ryoji-iwata-entreprise.768.webp 768w,
-								./assets/images/slider/1024/ryoji-iwata-entreprise.1024.webp 1024w,
-								./assets/images/slider/1440/ryoji-iwata-entreprise.1440.webp 1440w,
-								./assets/images/slider/1920/ryoji-iwata-entreprise.1920.webp 1920w" sizes="100vw">
+							class = "d-block w-100" width="1920" height="888" style="max-width: 100%; height: auto;" >
 					</div>
 
 					<div class="carousel-item">
 						<img fetchpriority="low" src="./assets/images/slider/1024/nicholas-green-concert.1024.webp" class="d-block w-100"
 							alt="Foule dans un concert"
-							class = "d-block w-100" width="1920" height="888" style="max-width: 100%; height: auto;" 
-							srcset="./assets/images/slider/375/nicholas-green-concert.375.webp 375w,
-								./assets/images/slider/768/nicholas-green-concert.768.webp 768w,
-								./assets/images/slider/1024/nicholas-green-concert.1024.webp 1024w,
-								./assets/images/slider/1440/nicholas-green-concert.1440.webp 1440w,
-								./assets/images/slider/1920/nicholas-green-concert.1920.webp 1920w" sizes="100vw">
+							class = "d-block w-100" width="1920" height="888" style="max-width: 100%; height: auto;" >
 					</div>
 
 					<div class="carousel-item">
 						<img fetchpriority="low" src= "./assets/images/slider/1024/edward-cisneros-mariage.1024.webp" class="d-block w-100"
 							alt="Couple qui danse dans un balet"
-							class = "d-block w-100" width="1920" height="888" style="max-width: 100%; height: auto;" 
-							srcset="./assets/images/slider/375/edward-cisneros-mariage.375.webp 375w,
-								./assets/images/slider/768/edward-cisneros-mariage.768.webp 768w,
-								./assets/images/slider/1024/edward-cisneros-mariage.1024.webp 1024w,
-								./assets/images/slider/1440/edward-cisneros-mariage.1440.webp 1440w,
-								./assets/images/slider/1920/edward-cisneros-mariage.1920.webp 1920w" sizes="100vw">
+							class = "d-block w-100" width="1920" height="888" style="max-width: 100%; height: auto;" >
 
 
 					</div>
