--- a/index.html
+++ b/index.html
@@ -114,16 +114,19 @@
 						</picture>
 					</div>
 					<div class="carousel-item">
-						<source media="(max-width: 1440px)" srcset="./assets/images/slider/1440/nicholas-green-concert.1440.webp">
-						<source media="(min-width: 375px)" srcset="./assets/images/slider/375/nicholas-green-concert.375.webp">
-						<img src="./assets/images/slider/1024/nicholas-green-concert.1024.webp" class="d-block w-100" alt="Foule dans un concert" width="1920" height="888">
+						<picture>
+							<source media="(max-width: 1440px)" srcset="./assets/images/slider/1440/nicholas-green-concert.1440.webp">
+							<source media="(min-width: 375px)" srcset="./assets/images/slider/375/nicholas-green-concert.375.webp">
+							<img src="./assets/images/slider/1024/nicholas-green-concert.1024.webp" class="d-block w-100" alt="Foule dans un concert" width="1920" height="888">
+						</picture>
 					</div>
 					<div class="carousel-item">
-						<source media="(max-width: 1440px)" srcset="./assets/images/slider/1440/ryoji-iwata-entreprise.1440.webp">
-						<source media="(min-width: 375px)" srcset="./assets/images/slider/375/ryoji-iwata-entreprise.375.webp">
-						<img src="./assets/images/slider/1024/ryoji-iwata-entreprise.1024.webp" class="d-block w-100" alt="Homme en costume Traversant un passage piétion" width="1920" height="888">
+						<picture>
+							<source media="(max-width: 1440px)" srcset="./assets/images/slider/1440/ryoji-iwata-entreprise.1440.webp">
+							<source media="(min-width: 375px)" srcset="./assets/images/slider/375/ryoji-iwata-entreprise.375.webp">
+							<img src="./assets/images/slider/1024/ryoji-iwata-entreprise.1024.webp" class="d-block w-100" alt="Homme en costume Traversant un passage piétion" width="1920" height="888">
+					</picture>
 					</div>
-				</div>
 				</div>
 
 				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
