--- a/index.html
+++ b/index.html
@@ -107,28 +107,40 @@
 
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<picture>
-							<source media="(max-width: 1440px)" srcset="./assets/images/slider/1440/edward-cisneros-mariage.1440.webp">
-							<source media="(min-width: 375px)" srcset="./assets/images/slider/375/edward-cisneros-mariage.375.webp">
-							<img src="./assets/images/slider/1024/edward-cisneros-mariage.1024.webp" class="d-block w-100"  alt="Couple qui danse dans un balet" width="1920" height="888"
-							loading="lazy">
-						</picture>
+						<img src="./assets/images/slider/1024/ryoji-1024.webp" 
+						alt="Homme en costume Traversant un passage piétion" 
+						class="d-block w-100" width="1920" height="888" style="max-width: 100%; height: auto;" 
+						srcset="./assets/images/slider/320/ryoji-320.webp 320w,
+								./assets/images/slider/375/ryoji-375.webp 375w,
+								./assets/images/slider/425/ryoji-425.webp 425w,
+								./assets/images/slider/768/ryoji-768.webp 768w,
+								./assets/images/slider/1024/ryoji-1024.webp 1024w,
+								./assets/images/slider/1440/ryoji-1440.webp 1440w,
+								./assets/images/slider/1920/ryoji-1920.webp 1920w" sizes="100vw">
 					</div>
 					<div class="carousel-item">
-						<picture>
-							<source media="(max-width: 1440px)" srcset="./assets/images/slider/1440/nicholas-green-concert.1440.webp">
-							<source media="(min-width: 375px)" srcset="./assets/images/slider/375/nicholas-green-concert.375.webp">
-							<img src="./assets/images/slider/1024/nicholas-green-concert.1024.webp" class="d-block w-100" alt="Foule dans un concert" width="1920" height="888"
-							loading="lazy">
-						</picture>
+						<img src="./assets/images/slider/1024/nicholas-1024.webp" 
+						alt="Foule dans un concert"
+						class="d-block w-100" width="1920" height="888" style="max-width: 100%; height: auto;"  
+						srcset="./assets/images/slider/320/nicholas-320.webp 320w,
+								./assets/images/slider/375/nicholas-375.webp 375w,
+								./assets/images/slider/425/nicholas-425.webp 425w,
+								./assets/images/slider/768/nicholas-768.webp 768w,
+								./assets/images/slider/1024/nicholas-1024.webp 1024w,
+								./assets/images/slider/1440/nicholas-1440.webp 1440w,
+								./assets/images/slider/1920/nicholas-1920.webp 1920w" sizes="100vw">
 					</div>
 					<div class="carousel-item">
-						<picture>
-							<source media="(max-width: 1440px)" srcset="./assets/images/slider/1440/ryoji-iwata-entreprise.1440.webp">
-							<source media="(min-width: 375px)" srcset="./assets/images/slider/375/ryoji-iwata-entreprise.375.webp">
-							<img src="./assets/images/slider/1024/ryoji-iwata-entreprise.1024.webp" class="d-block w-100" alt="Homme en costume Traversant un passage piétion" width="1920" height="888" 
-							loading="lazy">
-						</picture>
+						<img src="./assets/images/slider/1024/edward-1024.webp" 
+						alt="Couple qui dance dans un balet"
+						class="d-block w-100" width="1920" height="888" style="max-width: 100%; height: auto;"
+						srcset="./assets/images/slider/320/edward-320.webp 320w,
+								./assets/images/slider/375/edward-375.webp 375w,
+								./assets/images/slider/425/edward-425.webp 425w,
+								./assets/images/slider/768/edward-768.webp 768w,
+								./assets/images/slider/1024/edward-1024.webp 1024w,
+								./assets/images/slider/1440/edward-1440.webp 1440w,
+								./assets/images/slider/1920/edward-1920.webp 1920w" sizes="100vw">
 					</div>
 				</div>
 
