--- a/index.html
+++ b/index.html
@@ -114,8 +114,7 @@
 						srcset="./assets/images/slider/375/ryoji-375.webp 375w,
 								./assets/images/slider/768/ryoji-768.webp 768w,
 								./assets/images/slider/1024/ryoji-1024.webp 1024w,
-								./assets/images/slider/1440/ryoji-1440.webp 1440w,
-								./assets/images/slider/1920/ryoji-1920.webp 1920w" sizes="100vw">
+								./assets/images/slider/1440/ryoji-1440.webp 1440w" sizes="100vw">
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/images/slider/1024/nicholas-1024.webp" 
@@ -125,8 +124,7 @@
 						srcset="./assets/images/slider/375/nicholas-375.webp 375w,
 								./assets/images/slider/768/nicholas-768.webp 768w,
 								./assets/images/slider/1024/nicholas-1024.webp 1024w,
-								./assets/images/slider/1440/nicholas-1440.webp 1440w,
-								./assets/images/slider/1920/nicholas-1920.webp 1920w" sizes="100vw">
+								./assets/images/slider/1440/nicholas-1440.webp 1440w" sizes="100vw">
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/images/slider/1024/edward-1024.webp" 
@@ -170,13 +168,12 @@
 					endroit, une lumière et les rendre immortels, voilà ce qui me fait
 					vibrer.
 				</p>
-				<p>
-					Nous passons notre vie à chercher le bonheur, et lorsque nous y
+				<p><strong> Nous passons notre vie à chercher le bonheur, et lorsque nous y
 					touchons, nous n’avons qu’une envie : le figer au travers de
-					photographies pour le savourer avec les personnes qui sont
+					photographies</strong> pour le savourer avec les personnes qui sont
 					importantes à nos yeux, ou le partager au plus grand nombre. C’est
-					ce que je vous propose : saisir ces merveilleux moments au travers
-					de mon regard, mon approche, ma technique. Rendre ces moments
+					ce que je vous propose : <strong>ces merveilleux moments au travers
+					de mon regard, mon approche, ma technique.</strong> Rendre ces moments
 					immortels, afin que vous puissiez y puiser de l’amour, du bonheur,
 					de la tendresse et de lumière à chaque fois que vous poserez les
 					yeux sur vos photos.
