--- a/index.html
+++ b/index.html
@@ -109,8 +109,7 @@
 					<div class="carousel-item active">
 						<img src="./assets/images/slider/1024/ryoji-1024.webp" 
 						alt="Homme en costume Traversant un passage piétion" 
-						loading="lazy"
-						class="d-block w-100" width="1920" height="888" style="max-width: 100%; height: auto;" 
+						class="d-block w-100" width="1920" height="888"
 						srcset="./assets/images/slider/375/ryoji-375.webp 375w,
 								./assets/images/slider/768/ryoji-768.webp 768w,
 								./assets/images/slider/1024/ryoji-1024.webp 1024w,
@@ -119,8 +118,7 @@
 					<div class="carousel-item">
 						<img src="./assets/images/slider/1024/nicholas-1024.webp" 
 						alt="Foule dans un concert"
-						loading="lazy"
-						class="d-block w-100" width="1920" height="888" style="max-width: 100%; height: auto;"  
+						class="d-block w-100" width="1920" height="888" 
 						srcset="./assets/images/slider/375/nicholas-375.webp 375w,
 								./assets/images/slider/768/nicholas-768.webp 768w,
 								./assets/images/slider/1024/nicholas-1024.webp 1024w,
@@ -129,8 +127,7 @@
 					<div class="carousel-item">
 						<img src="./assets/images/slider/1024/edward-1024.webp" 
 						alt="Couple qui dance dans un balet"
-						loading="lazy"
-						class="d-block w-100" width="1920" height="888" style="max-width: 100%; height: auto;"
+						class="d-block w-100" width="1920" height="888"
 						srcset="./assets/images/slider/375/edward-375.webp 375w,
 								./assets/images/slider/768/edward-768.webp 768w,
 								./assets/images/slider/1024/edward-1024.webp 1024w,
