--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
 						srcset="./assets/images/slider/375/ryoji-375.webp 375w,
 								./assets/images/slider/768/ryoji-768.webp 768w,
 								./assets/images/slider/1024/ryoji-1024.webp 1024w,
-								./assets/images/slider/1440/ryoji-1440.webp 1440w" sizes="100vw">
+								./assets/images/slider/1440/ryoji-1440.webp 1440w" sizes="100vw"
+						loading="lazy">
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/images/slider/1024/nicholas-1024.webp" 
@@ -122,7 +123,8 @@
 						srcset="./assets/images/slider/375/nicholas-375.webp 375w,
 								./assets/images/slider/768/nicholas-768.webp 768w,
 								./assets/images/slider/1024/nicholas-1024.webp 1024w,
-								./assets/images/slider/1440/nicholas-1440.webp 1440w" sizes="100vw">
+								./assets/images/slider/1440/nicholas-1440.webp 1440w" sizes="100vw"
+						loading="lazy">
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/images/slider/1024/edward-1024.webp" 
@@ -131,7 +133,8 @@
 						srcset="./assets/images/slider/375/edward-375.webp 375w,
 								./assets/images/slider/768/edward-768.webp 768w,
 								./assets/images/slider/1024/edward-1024.webp 1024w,
-								./assets/images/slider/1440/edward-1440.webp 1440w" sizes="100vw">
+								./assets/images/slider/1440/edward-1440.webp 1440w" sizes="100vw"
+						loading="lazy">
 					</div>
 				</div>
 
